css/main.css
.navbar-end .navbar-item .title {
    margin-bottom: 0.4rem;
}

.navbar-item img {
    max-height: 4.75rem;
}

hr {
    /* background-color: red; */
    margin: 0.7rem 0;
}

hr.column {
    padding: 0.15rem;
}

.hero {
    background: url(../img/igor-miske-174209_med.jpg) no-repeat;
    background-size: cover;
    background-position: center;
    height: 500px;
}

.card-content .content p {
    min-height: 3rem;
}

.footer {
    padding: 1rem 1.5rem;
}

@media screen and (max-width: 768px) {
    .navbar-end {
        padding-right: 0;
    }
}

